src/snapshots/hugr_qir__lower_ssa_vars_v2__test__lowered_v2@tail_call_result_downstream_phi.snap
---
source: src/lower_ssa_vars_v2.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:tail_call_result_downstream_phi>'
source_filename = "tail_call_result_downstream_phi"
target datalayout = "<normalized>"
target triple = "<normalized>"

@0 = private unnamed_addr constant [5 x i8] c"flag\00", align 1

define void @__hugr__.main.1(i1 %cond0, i1 %cond1) {
entry:
  br i1 %cond0, label %entry.leaf.1, label %entry.leaf.0

right:                                            ; preds = %entry.leaf.1, %entry.leaf.0
  %val.merge = phi i1 [ %flag1, %entry.leaf.0 ], [ %flag2, %entry.leaf.1 ]
  br label %join

join:                                             ; preds = %entry.leaf.0, %entry.leaf.1, %right
  %phi.external = phi i1 [ false, %right ], [ %flag1, %entry.leaf.0 ], [ %flag2, %entry.leaf.1 ]
  tail call void @__test__consume_bool(i1 %phi.external)
  ret void

entry.leaf.0:                                     ; preds = %entry
  %flag1 = call i1 @__quantum__qis__read_result__body(ptr null)
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 1 to ptr))
  br i1 %cond1, label %join, label %right

entry.leaf.1:                                     ; preds = %entry
  %flag2 = call i1 @__quantum__qis__read_result__body(ptr null)
  call void @__quantum__qis__reset__body(ptr null)
  br i1 %cond1, label %join, label %right
}

declare i1 @__quantum__qis__read_result__body(ptr)

declare void @__quantum__qis__reset__body(ptr)

declare void @__test__consume_bool(i1)
