src/snapshots/hugr_qir__lower_ssa_vars_v2__test__lowered_v2@tail_gep_bitcast_and_call.snap
---
source: src/lower_ssa_vars_v2.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:tail_gep_bitcast_and_call>'
source_filename = "tail_gep_bitcast_and_call"
target datalayout = "<normalized>"
target triple = "<normalized>"

@0 = private unnamed_addr constant [5 x i8] c"tail\00", align 1

define void @__hugr__.main.1(i1 %cond) {
entry:
  br i1 %cond, label %entry.leaf.1, label %entry.leaf.0

common.ret:                                       ; preds = %entry.leaf.1, %entry.leaf.0
  ret void

entry.leaf.0:                                     ; preds = %entry
  call void @__test__consume_label(ptr getelementptr (i8, ptr @0, i64 1))
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 5 to ptr))
  br label %common.ret

entry.leaf.1:                                     ; preds = %entry
  call void @__test__consume_label(ptr getelementptr (i8, ptr @0, i64 1))
  call void @__quantum__qis__reset__body(ptr null)
  br label %common.ret
}

declare void @__test__consume_label(ptr)

declare void @__quantum__qis__reset__body(ptr)
