src/snapshots/hugr_qir__lower_ssa_vars_v2__test__lowered_v2@tail_unreachable_terminator.snap
---
source: src/lower_ssa_vars_v2.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:tail_unreachable_terminator>'
source_filename = "tail_unreachable_terminator"
target datalayout = "<normalized>"
target triple = "<normalized>"

define void @__hugr__.main.1(i1 %cond) {
entry:
  br i1 %cond, label %entry.leaf.1, label %entry.leaf.0

entry.leaf.0:                                     ; preds = %entry
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 9 to ptr))
  unreachable

entry.leaf.1:                                     ; preds = %entry
  call void @__quantum__qis__reset__body(ptr null)
  unreachable
}

declare void @__quantum__qis__reset__body(ptr)
